--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
